--- a/pom.xml
+++ b/pom.xml
@@ -9,20 +9,20 @@
         <relativePath />
     </parent>
 
-    <groupId>net.masterthought.jenkins</groupId>
-    <artifactId>cucumber-reports</artifactId>
-    <version>3.5.0-SNAPSHOT</version>
+    <groupId>com.equilar.test</groupId>
+    <artifactId>insight-benchmark-report-plugin</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
     <packaging>hpi</packaging>
 
     <!-- This name and URL are added by the Jenkins when displaying help.html file -->
-    <name>Cucumber reports</name>
+    <name>insight-benchmark-report-plugin</name>
     <url>https://github.com/jenkinsci/cucumber-reports-plugin</url>
 
     <scm>
-        <connection>scm:git:git@github.com:jenkinsci/cucumber-reports-plugin.git</connection>
-        <developerConnection>scm:git:git@github.com:jenkinsci/cucumber-reports-plugin.git</developerConnection>
-        <url>git@github.com:jenkinsci/cucumber-reports-plugin.git</url>
-        <tag>cucumber-reports-2.6.0</tag>
+        <connection>scm:git:git@github.com:ycj28c/benchmark-report-plugin.git</connection>
+        <developerConnection>scm:git:git@github.com:ycj28c/benchmark-report-plugin.git</developerConnection>
+        <url>git@github.com:ycj28c/benchmark-report-plugin.git</url>
+        <tag>insight-benchmark-report-plugin-0.0.1</tag>
     </scm>
 
     <description>
@@ -95,11 +95,11 @@
         </pluginManagement>
     </build>
 
-    <dependencies>
+    <!-- dependencies>
         <dependency>
             <groupId>net.masterthought</groupId>
             <artifactId>cucumber-reporting</artifactId>
             <version>3.4.0</version>
         </dependency>
-    </dependencies>
+    </dependencies-->
 </project>
