--- a/pom.xml
+++ b/pom.xml
@@ -11,24 +11,22 @@
 
     <groupId>com.equilar.test</groupId>
     <artifactId>insight-benchmark-report-plugin</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>hpi</packaging>
 
     <!-- This name and URL are added by the Jenkins when displaying help.html file -->
     <name>insight-benchmark-report-plugin</name>
-    <url>https://github.com/jenkinsci/cucumber-reports-plugin</url>
+    <url>https://github.com/ycj28c/benchmark-report-plugin</url>
 
     <scm>
         <connection>scm:git:git@github.com:ycj28c/benchmark-report-plugin.git</connection>
         <developerConnection>scm:git:git@github.com:ycj28c/benchmark-report-plugin.git</developerConnection>
         <url>git@github.com:ycj28c/benchmark-report-plugin.git</url>
-        <tag>insight-benchmark-report-plugin-0.0.1</tag>
+        <tag>insight-benchmark-report-plugin-1.0.0</tag>
     </scm>
 
     <description>
-        This project provides pretty html reports for Cucumber. It works by generating html from the cucumber json
-        report formatter. Can be used anywhere a json report is generated (Java, Ruby, JavaScript and other
-        implementations).
+        This project provides pretty html reports for insight benchmark report. It works by generating html from the benchmark report. 
     </description>
 
     <licenses>
@@ -40,14 +38,9 @@
 
     <developers>
         <developer>
-            <id>damianszczepanik</id>
-            <name>Damian Szczepanik</name>
-            <email>damianszczepanik@github</email>
-        </developer>
-        <developer>
-            <id>kingsleyh</id>
-            <name>Kingsley Hendrickse</name>
-            <email>kingsley.hendrickse@gmail.com</email>
+            <id>ycj28c</id>
+            <name>Ralph Yang</name>
+            <email>cyangjob@gmail.com</email>
         </developer>
     </developers>
 
