--- a/src/main/resources/net/masterthought/jenkins/SafeReportPublisher/config.properties
+++ b/src/main/resources/net/masterthought/jenkins/SafeReportPublisher/config.properties
@@ -1,8 +1,8 @@
-jsonReportDirectory=Report Location
-jsonReportDirectory.title=HTML directory to archive
-jsonReportDirectory.description=The path to the HTML report directory relative to the workspace e.g. target.
-fileIncludePattern.title=Index page[s]
-fileIncludePattern.description=The HTML index page relative to the archived report.
+archivedReportDirectory=Report Location
+archivedReportDirectory.title=HTML directory to archive
+archivedReportDirectory.description=The path to the HTML report directory relative to the workspace e.g. target.
+htmlIndexPage.title=Index page[s]
+htmlIndexPage.description=The HTML index page relative to the archived report.
 
 #fileExcludePattern.title=File Exclude Pattern
 #fileExcludePattern.description=Nothing is excluded by default.
